--- a/src/pages/login/index.astro
+++ b/src/pages/login/index.astro
@@ -13,6 +13,10 @@ import './_login.scss';
       <LoginForm client:load />
 
       <p class="text-center">
+        <a href="/forgot-password">Forgot your password?</a>
+      </p>
+
+      <p class="text-center">
         Don't have an account? <a href="/register">Register here</a>
       </p>
     </Card>
